--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,15 @@ repositories {
 }
 
 dependencies {
-  compile 'org.springframework.boot:spring-boot:1.3.3.RELEASE'
+  compile "org.springframework.boot:spring-boot:$springBootVersion"
+  compile "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
+  compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
 
-  runtime '' // TODO  : use persistent storage / per-environment storage
+  runtime 'org.hsqldb:hsqldb:2.3.3' // TODO  : use persistent storage / per-environment storage
 }
 
 mainClassName="com.github.aesteve.projuice.Application"
 
 task wrapper(type: Wrapper) {
-	gradleVersion = "2.13"
+	gradleVersion = '2.13'
 }
